# EMCL

./: CMakeLists.txt  README.md  ccmcl.json
src/: main.c  main.h  utils.c  utils.h
src/modules/: downloadApiProviders.c  downloadApiProviders.h  mclauncher.c  mclauncher.h
src/options/: helpOption.c  installOption.c  listOption.c  options.h  printOption.c  selectOption.c  startGameOption.c
